--- a/index.html
+++ b/index.html
@@ -28,60 +28,75 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header>
-        <h3>Bol</h3>
-        <h1>Surf Coaching</h1>
+    <header class="bg-image">
+        <h3>surf like a pro</h3>
+        <h1>the ultimate surf coaching</h1>
     </header>
 
     <!------ Gallery Section ------------>
     <section>
+        <div>
+            <h2>train with the best</h2>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
+        </div>
+        <!-- background image surfing-->
         <div></div>
+         <!-- background portrait image-->    
         <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <h3> your guide</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
+        </div>
     </section>
 
     <!--------- Featured Icon Grid --------->
     <section>
         <div>
-            <h2></h2>
+            <h2>secret spots you will love</h2>
             <p></p>
         </div>
-        <div></div>
-        <div></div>
         <div>
-            <h2></h2>
-            <p></p>
+            <i class="fas fa-water"></i>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis deleniti aliquid fugiat ad, recusandae deserunt unde fuga cum inventore dignissimos porro nam ullam eos quibusdam accusamus voluptatibus id tempore ea.</p>
+        </div>
+        <div>
+            <i class="fas fa-water"></i>
+            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. In alias velit iste harum commodi cupiditate, ipsa nisi consequatur deleniti dignissimos eaque totam impedit vel odio fugit saepe? Commodi, mollitia dignissimos.</p>
+        </div>
+        <div>
+            <i class="fas fa-water"></i>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ea necessitatibus itaque esse, eligendi, perspiciatis similique, beatae error dolor quas quidem aspernatur provident ipsum recusandae officia quo? Error, eligendi sapiente.</p>
         </div>
     </section>
 
     <!--------- Image Banner ------------->
-    <section>
-        <h3></h3>
+    <section class="bg-wave">
+        <div></div>
+        <h3>take your surfing to the next level</h3>
+        <div></div>
     </section>
 
     <!---------- Testimonial Section ------>
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>"</div>
+        <div>What a great experience catching the best waves in Bali. I had so much fun surfing with Bol.</div>
+        <div>"</div>
     </section>
 
     <!----------- Footer ---------------->
     <footer>
         <div>
-            <h2></h2>
-            <p></p>
+            <h2>Let's connect</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tenetur sequi consequatur obcaecati in itaque commodi, necessitatibus neque blanditiis cupiditate perferendis adipisci voluptatibus natus maiores iusto debitis ipsum ea odit. </p>
         </div>
         <div>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
+            <p>Call: 04 555 5555</p>
+            <p>Email: hello@surfcaoching.co</p>
+            <p>Location: Bali - Indonesia</p>
+            <p>Instagram: @surfcoaching_bali</p>
         </div>
     </footer>
     
-    
-
 </body>
+
 </html>
