--- a/index.html
+++ b/index.html
@@ -28,72 +28,88 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header class="bg-image">
-        <h3>surf like a pro</h3>
-        <h1>the ultimate surf coaching</h1>
+    <header class="padded bg-image text-center tall-100">
+        <div>
+            <h3> <span class="featured-text">surf</span> with a pro </h3>
+        <h1>the ultimate surf coaching & guiding </h1>
+    </div>    
     </header>
 
     <!------ Gallery Section ------------>
-    <section>
-        <div>
-            <h2>train with the best</h2>
+    <section class="grid">
+        <div class="padded col-6-middle">
+            <h2> <span class="featured-text">train</span> with the best </h2>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
         </div>
-        <!-- background image surfing-->
-        <div></div>
-         <!-- background portrait image-->    
-        <div></div>
-        <div>
-            <h3> your guide</h3>
+        <!-- background image portrait-->
+        <div class="bg-image bg-portrait col-6 tall-70"></div>
+         <!-- background image surfing-->    
+        <div class="bg-image bg-surfing col-6 tall-70"></div>
+        <div class="padded col-6-middle">
+            <h2> <span class="featured-text">elevate</span> your surfing skill</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
         </div>
     </section>
 
     <!--------- Featured Icon Grid --------->
-    <section>
-        <div>
-            <h2>secret spots you will love</h2>
+    <section class="padded bg-dark grid">
+        <div class="padded-sm col-12 text-center">
+            <h2><span class="featured-text">surf trips</span> you will love</h2>
             <p></p>
         </div>
-        <div>
+        <div class="padded-sm col-3">
             <i class="fas fa-water"></i>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis deleniti aliquid fugiat ad, recusandae deserunt unde fuga cum inventore dignissimos porro nam ullam eos quibusdam accusamus voluptatibus id tempore ea.</p>
         </div>
-        <div>
+        <div class="padded-sm col-3">
             <i class="fas fa-water"></i>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. In alias velit iste harum commodi cupiditate, ipsa nisi consequatur deleniti dignissimos eaque totam impedit vel odio fugit saepe? Commodi, mollitia dignissimos.</p>
         </div>
-        <div>
+        <div class="padded-sm col-3">
+            <i class="fas fa-water"></i>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ea necessitatibus itaque esse, eligendi, perspiciatis similique, beatae error dolor quas quidem aspernatur provident ipsum recusandae officia quo? Error, eligendi sapiente.</p>
+        </div>
+        <div class="padded-sm col-3">
             <i class="fas fa-water"></i>
             <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit ea necessitatibus itaque esse, eligendi, perspiciatis similique, beatae error dolor quas quidem aspernatur provident ipsum recusandae officia quo? Error, eligendi sapiente.</p>
         </div>
     </section>
 
     <!--------- Image Banner ------------->
-    <section class="bg-wave">
-        <div></div>
-        <h3>take your surfing to the next level</h3>
-        <div></div>
+    <section class="padded bg-wave bg-image tall-70 grid text-center">
+        <div class="col-12-middle">
+        <h3 class="big-text">
+            <span class="small-text font-weight-semi-bold">we take you on an unforgettable adventure</span>
+            <br> <span class="blue-text">chasing</span> <span class="white-text"> waves</span> </h3>
+       </div>
     </section>
 
     <!---------- Testimonial Section ------>
-    <section>
-        <div>"</div>
-        <div>What a great experience catching the best waves in Bali. I had so much fun surfing with Bol.</div>
-        <div>"</div>
+    <section class="padded-lg grid">
+        <div class="col-1 text-right">
+            <span class="quote-icon">“</span>
+        </div>
+        <div class="col-10 text-center"> 
+            <p class="medium-text">What a great experience catching the best waves in Bali. I had so much fun surfing and hanging with Bol.</p>
+            <p class="subtitle"> - A very happy surfer </p>
+        </div>
+        <div class="col-1">
+            <span class="quote-icon">“</span>
+        </div>
     </section>
 
     <!----------- Footer ---------------->
-    <footer>
-        <div>
-            <h2>Let's connect</h2>
+    <footer class="padded bg-dark grid-spaceBetween">
+        <div class="col-4-bottom">
+            <h2>Let's <br> <span class="featured-text">connect</span> </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tenetur sequi consequatur obcaecati in itaque commodi, necessitatibus neque blanditiis cupiditate perferendis adipisci voluptatibus natus maiores iusto debitis ipsum ea odit. </p>
         </div>
-        <div>
-            <p>Call: 04 555 5555</p>
-            <p>Email: hello@surfcaoching.co</p>
-            <p>Location: Bali - Indonesia</p>
-            <p>Instagram: @surfcoaching_bali</p>
+
+        <div class="col-4-bottom">
+            <p> <strong>Call:</strong> <a href="tel:#"> 04555 5555</a> </p>
+            <p> <strong>Email:</strong> <a href="mailto:#"> hello@surfcoachningbali.co</a></p>
+            <p> <strong>Store:</strong> <a href="#">Bali - Indonesia</a></p>
+            <p> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachningbali">@surfcoachingbali</a> </p>
         </div>
     </footer>
     
