cleaning up image folder and add new image section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
             <span class="quote-icon">“</span>
         </div>
     </section>
+    <!--Image Banner 2 -->
+    <section class="padded bg-surferdude bg-image tall-70"></section>
 
     <!----------- Footer ---------------->
     <footer class="padded bg-dark grid-spaceBetween">
