Footer col change

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tenetur sequi consequatur obcaecati in itaque commodi, necessitatibus neque blanditiis cupiditate perferendis adipisci voluptatibus natus maiores iusto debitis ipsum ea odit. </p>
         </div>
 
-        <div class="col-4-bottom">
+        <div class="col-6-bottom">
             <p> <strong>Call:</strong> <a href="tel:#"> 04555 5555</a> </p>
-            <p> <strong>Email:</strong> <a href="mailto:#"> hello@surfcoachningbali.co</a></p>
+            <p> <strong>Email:</strong> <a href="mailto:#"> hello@surfcoachingbali.co</a></p>
             <p> <strong>Store:</strong> <a href="#">Bali - Indonesia</a></p>
-            <p> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachningbali">@surfcoachingbali</a> </p>
+            <p> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachingbali">@surfcoachingbali</a> </p>
         </div>
     </footer>
     
