--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
         </div>
 
         <div class="col-5-bottom">
-            <p> <strong>Call:</strong> <a href="tel:#"> 04555 5555</a> </p>
-            <p> <strong>Email:</strong> <a href="mailto:#"> hello@surfcoachingbali.co</a></p>
-            <p> <strong>Store:</strong> <a href="#">Bali - Indonesia</a> </p>
-            <p> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachingbali">@surfcoachingbali</a> </p>
+            <p class="margin-0"> <strong>Call:</strong> <a href="tel:#"> 04555 5555</a> </p>
+            <p class="margin-0"> <strong>Email:</strong> <a href="mailto:#"> hello@surfcoachingbali.co</a></p>
+            <p class="margin-0"> <strong>Store:</strong> <a href="#">Bali - Indonesia</a> </p>
+            <p class="margin-0"> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachingbali">@surfcoachingbali</a> </p>
         </div>
     </footer>
     
