--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!------- Header Banner ---------->
     <header class="padded bg-image text-center tall-100">
         <div>
-            <h3> <span class="featured-text">surf</span> with a pro </h3>
+            <h3> <span class="featured-text editable">surf</span> with a pro </h3>
         <h1>the ultimate surf coaching & guiding </h1>
     </div>    
     </header>
