Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header class="padded bg-image text-center tall-100 editable">
+    <header class="padded bg-image text-center tall-100">
         <div>
-            <h3> <span class="featured-text">surf</span> with a pro </h3>
+            <h3 class="editable"> <span class="featured-text">surf</span> with a pro </h3>
         <h1>the ultimate surf coaching & guiding </h1>
     </div>    
     </header>
