--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <header class="padded bg-image text-center tall-100">
         <div>
             <h3 class="editable"> <span class="featured-text">surf</span> with a pro </h3>
-        <h1>the ultimate surf coaching & guiding </h1>
+        <h1 class="editable">the ultimate surf coaching & guiding </h1>
     </div>    
     </header>
 
     <!------ Gallery Section ------------>
     <section class="grid">
-        <div class="padded col-6-middle">
+        <div class="padded col-6-middle editable">
             <h2> <span class="featured-text">train</span> with the best </h2>
             <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
         </div>
@@ -45,7 +45,7 @@
         <div class="bg-image bg-portrait col-6 tall-70"></div>
          <!-- background image surfing-->    
         <div class="bg-image bg-surfing col-6 tall-70"></div>
-        <div class="padded col-6-middle">
+        <div class="padded col-6-middle editable">
             <h2> <span class="featured-text">elevate</span> your surfing skill</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
         </div>
