Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 
     <!-- Gridlex for Flexbox grids -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css" />
 
     <!-- Google font - Red Hat Display (300, 400, 500, 800) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;800&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;500;800&display=swap" rel="stylesheet" /> 
 
 
     <!-- CSS custom stylesheet, always at the bottom of the head -->
-    <link href="/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet" />
 
 </head>
 
@@ -30,24 +30,28 @@
     <!------- Header Banner ---------->
     <header class="padded bg-image text-center tall-100">
         <div>
-            <h3 class="editable"> <span class="featured-text">surf</span> with a pro </h3>
-        <h1 class="editable">the ultimate surf coaching & guiding </h1>
+            <h3 class="editable">
+                <span class="featured-text">surf</span> with a pro
+            </h3>
+        <h1 class="editable">
+            the ultimate surf coaching
+        </h1>
     </div>    
     </header>
 
     <!------ Gallery Section ------------>
     <section class="grid">
         <div class="padded col-6-middle editable">
-            <h2> <span class="featured-text">train</span> with the best </h2>
-            <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
+            <h2><span class="featured-text">train</span> with the best</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
         </div>
         <!-- background image portrait-->
         <div class="bg-image bg-portrait col-6 tall-70"></div>
          <!-- background image surfing-->    
         <div class="bg-image bg-surfing col-6 tall-70"></div>
         <div class="padded col-6-middle editable">
-            <h2> <span class="featured-text">elevate</span> your surfing skill</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
+            <h2><span class="featured-text">elevate</span> your surfing skill</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
         </div>
     </section>
 
@@ -80,7 +84,7 @@
         <div class="col-12-middle">
         <h3 class="big-text">
             <span class="small-text font-weight-semi-bold">we take you on an unforgettable adventure</span>
-            <br> <span class="blue-text">chasing</span> <span class="white-text"> waves</span> </h3>
+            <br /> <span class="blue-text">chasing</span> <span class="white-text"> waves</span> </h3>
        </div>
     </section>
 
@@ -103,7 +107,7 @@
     <!----------- Footer ---------------->
     <footer class="padded bg-dark grid-spaceBetween">
         <div class="col-4-bottom">
-            <h2>Let's <br> <span class="featured-text">connect</span> </h2>
+            <h2>Let's <br /> <span class="featured-text">connect</span> </h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed tenetur sequi consequatur obcaecati in itaque commodi, necessitatibus neque blanditiis cupiditate perferendis adipisci voluptatibus natus maiores iusto debitis ipsum ea odit. </p>
         </div>
 
