--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             <a href="#"> Contact </a>
             <a href="#" class="emphasis-button"> Book now </a>
           </nav>  
-        <div class="padded bg-image text-center tall-100">
+        <!--<div class="padded bg-image text-center tall-100">
             <h3 class="editable">
                 <span class="featured-text">surf</span> with a pro
             </h3>
         <h1 class="editable">
             the ultimate surf coaching
-        </h1>
-    </div>    
+        </h1>-->
+    </div>   
     </header>
 
     <!------ Gallery Section ------------>
