--- a/index.html
+++ b/index.html
@@ -29,19 +29,22 @@
 
     <!------- Header Banner ---------->
     <header>
-        <div class="col-6-middle">
-            <a href="/">
-              <h2 class="logo"> Made for Waves</h2>
-              <h1 class="logo-h1"> Surfguiding & Coaching </h1>
-            </a>
+        <div class="padded bg-image text-center tall-100">
+            <div class="col-6-middle">
+                <a href="/">
+                  <h2 class="logo"> Made for Waves</h2>
+                  <h1 class="logo-h1"> Surfguiding & Coaching </h1>
+                </a>
+            </div>
+            <nav class="col-6-middle right">
+                <a href="#"> About me </a> |
+                <a href="#"> Surf Guiding </a> |
+                <a href="#"> Surf Adventure </a> |
+                <a href="#"> Contact </a>
+                <a href="#" class="emphasis-button"> Book now </a>
+            </nav>  
         </div>
-        <nav class="col-6-middle right">
-            <a href="#"> About me </a> |
-            <a href="#"> Surf Guiding </a> |
-            <a href="#"> Surf Adventure </a> |
-            <a href="#"> Contact </a>
-            <a href="#" class="emphasis-button"> Book now </a>
-        </nav>  
+        
         <!--<div class="padded bg-image text-center tall-100">
             <h3 class="editable">
                 <span class="featured-text">surf</span> with a pro
