adding class of grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!------- Header Banner ---------->
     <header>
-        <div class="padded bg-image text-center tall-100">
+        <div class="grid padded bg-image text-center tall-100">
             <div class="col-6-middle">
                 <a href="/">
                   <h2 class="logo"> Made for Waves</h2>
@@ -44,15 +44,6 @@
                 <a href="#" class="emphasis-button"> Book now </a>
             </nav>  
         </div>
-        
-        <!--<div class="padded bg-image text-center tall-100">
-            <h3 class="editable">
-                <span class="featured-text">surf</span> with a pro
-            </h3>
-        <h1 class="editable">
-            the ultimate surf coaching
-        </h1>-->
-      
     </header>
 
     <!------ Gallery Section ------------>
