--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!------- Header Banner ---------->
     <header>
-        <div class="grid padded bg-image text-center tall-100">
+        <div class="grid padded bg-image tall-100">
             <div class="col-6-middle">
                 <a href="/">
                   <h2 class="logo"> Made for Waves</h2>
