More changes in header

--- a/index.html
+++ b/index.html
@@ -28,22 +28,20 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header>
-        <div class="grid bg-image tall-100">
-            <div class="col-6-middle">
+    <header class="grid padded bg-image tall-100">
+         <div class="col-6-middle">
                 <a href="/">
                   <h2 class="logo"> Made for Waves</h2>
-                  <h1 class="logo-h1"> Surfguiding & Coaching </h1>
+                  <h1 class="logo-h1">Surfguiding & Coaching</h1>
                 </a>
-            </div>
-            <nav class="col-6-middle right">
+        </div>
+        <nav class="col-6-middle right">
                 <a href="#"> About me </a> |
                 <a href="#"> Surf Guiding </a> |
                 <a href="#"> Surf Adventure </a> |
                 <a href="#"> Contact </a>
                 <a href="#" class="emphasis-button"> Book now </a>
-            </nav>  
-        </div>
+        </nav>  
     </header>
 
     <!------ Gallery Section ------------>
