--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
     <!------- Header Banner ---------->
     <header class="grid padded bg-image tall-100">
-         <div class="col-6-middle">
+         <div class="col-4-middle">
                 <a href="/">
                   <h2 class="logo"> Made for Waves</h2>
                   <h1 class="logo-h1">Surfguiding & Coaching</h1>
                 </a>
         </div>
-        <nav class="col-6-middle right">
+        <nav class="col-8-middle right font-weight-semi-bold">
                 <a href="#"> About me </a> |
                 <a href="#"> Surf Guiding </a> |
                 <a href="#"> Surf Adventure </a> |
