--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header class="grid padded bg-image tall-100">
+    <header class="grid padded bg-image tall-100 align-items">
          <div class="col-4-middle">
                 <a href="/">
                   <h2 class="logo"> Made for Waves</h2>
