--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 <body>
 
     <!------- Header Banner ---------->
-    <header class="grid padded bg-image tall-100 align-items">
-         <div class="col-4-middle">
-                <a href="/">
-                  <h2 class="logo"> Made for Waves</h2>
-                  <h1 class="logo-h1">Surfguiding & Coaching</h1>
-                </a>
+    <header class="grid padded bg-image tall-100">
+        <div class="col-4-middle">
+            <a href="/">
+                <h2 class="logo"> Made for Waves</h2>
+                <h1 class="logo-h1">Surfguiding & Coaching</h1>
+            </a>
         </div>
         <nav class="col-8-middle right font-weight-semi-bold">
-                <a href="#"> About me </a> |
-                <a href="#"> Surf Guiding </a> |
-                <a href="#"> Surf Adventure </a> |
-                <a href="#"> Contact </a>
-                <a href="#" class="emphasis-button"> Book now </a>
+            <a href="#"> About me </a> |
+            <a href="#"> Surf Guiding </a> |
+            <a href="#"> Surf Adventure </a> |
+            <a href="#"> Contact </a>
+            <a href="#" class="emphasis-button"> Book now </a>
         </nav>  
     </header>
 
