--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!------- Header Banner ---------->
     <header class="bg-image tall-100"> 
-        <div class="grid padded">
+        <div class="grid padded-sm">
             <div class="col-4-middle">
                 <a href="/">
                     <h2 class="logo"> Made for Waves</h2>
