change margin on h2

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="grid padded-sm">
             <div class="col-4-middle">
                 <a href="/">
-                    <h2 class="logo padded-t-0"> Made for Waves</h2>
+                    <h2 class="logo margin-t-0"> Made for Waves</h2>
                     <h1 class="logo-h1">Surfguiding & Coaching</h1>
                 </a>
             </div>
