--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col-4-middle">
                 <a href="/">
                     <h2 class="logo margin-t-0"> Made for Waves</h2>
-                    <h1 class="logo-h1">Surfguiding & Coaching</h1>
+                    <h1 class="logo-h1 margin-t-0">Surfguiding & Coaching</h1>
                 </a>
             </div>
             <nav class="col-8-middle right font-weight-semi-bold">
