--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </a>
             </div>
             <nav class="col-8-middle right font-weight-semi-bold">
-                 <a href="#"> About me </a> |
+                 <a href="/about.html"> About me </a> |
                  <a href="#"> Surf Guiding </a> |
                  <a href="#"> Surf Adventure </a> |
                  <a href="#"> Contact </a>
