Adding more pages

--- a/surf-adventures.html
+++ b/surf-adventures.html
@@ -4,7 +4,7 @@
 <!----------- Head of HTML, external resources and metadata ---------->
 <head>
 
-    <title>surfcaoching-bol</title>
+    <title>Surf Guiding</title>
 
     <!-- Fontawesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -26,42 +26,13 @@
 
 <!----------------- Body, where all page content goes ---------------->
 <body>
-
-    <!------- Header Banner ---------->
-    <header class="bg-image tall-100"> 
-        <div class="grid padded-sm">
-            <div class="col-4-middle">
-                <a href="/">
-                    <h2 class="logo margin-t-0 margin-b-0"> Made for Waves</h2>
-                    <h1 class="logo-h1 margin-t-0">Surfguiding & Coaching</h1>
-                </a>
-            </div>
-            <nav class="col-8-middle right font-weight-semi-bold">
-                 <a href="/about.html"> About me </a> |
-                 <a href="/surfguiding.html"> Surf Guiding </a> |
-                 <a href="/surf-adventures.html"> Surf Adventure </a> |
-                 <a href="#"> Contact </a>
-                 <a href="#" class="emphasis-button"> Book now </a>
-            </nav>
-        </div> 
-    </header>
-
-    <!------ Gallery Section ------------>
-    <section class="grid">
-        <div class="padded col-6-middle editable">
-            <h2><span class="featured-text">train</span> with the best</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore voluptas maxime tempore quod minus temporibus repellendus non quam in, vitae corporis error quos reprehenderit doloremque perspiciatis reiciendis inventore ipsa doloribus?</p>
-        </div>
-        <!-- background image portrait-->
-        <div class="bg-image bg-portrait col-6 tall-70"></div>
-         <!-- background image surfing-->    
-        <div class="bg-image bg-surfing col-6 tall-70"></div>
-        <div class="padded col-6-middle editable">
-            <h2><span class="featured-text">elevate</span> your surfing skill</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quasi qui cupiditate possimus odio illum porro modi. Earum vero saepe, repellat corrupti natus quidem, a necessitatibus, dignissimos dolorem sunt tempore.</p>
-        </div>
-    </section>
-
+    <div class="grid padded">
+        <nav class="col-8-middle font-weight-semi-bold">
+            <a href="/index.html"> Home </a> |
+            <a href="/about.html"> About me </a> |
+            <a href="/surfguiding.html"> Surf Guiding </a> |
+        </nav>
+    </div>  
     <!--------- Featured Icon Grid --------->
     <section class="padded bg-dark grid">
         <div class="padded-sm col-12 text-center">
@@ -86,32 +57,6 @@
         </div>
     </section>
 
-    <!--------- Image Banner ------------->
-    <section class="padded bg-wave bg-image tall-70 grid text-center">
-        <div class="col-12-middle">
-            <h3 class="big-text">
-                <span class="small-text font-weight-semi-bold">we take you on an unforgettable adventure</span>
-                <br /> <span class="blue-text">chasing</span> <span class="white-text"> waves</span>
-            </h3>
-       </div>
-    </section>
-
-    <!---------- Testimonial Section ------>
-    <section class="padded-lg grid">
-        <div class="col-1 text-right">
-            <span class="quote-icon">“</span>
-        </div>
-        <div class="col-10 text-center"> 
-            <p class="medium-text">What a great experience catching the best waves in Bali. I had so much fun surfing and hanging with Bol.</p>
-            <p class="subtitle"> - A very happy surfer </p>
-        </div>
-        <div class="col-1">
-            <span class="quote-icon">“</span>
-        </div>
-    </section>
-    <!--Image Banner 2 -->
-    <section class="padded bg-surferdude bg-image tall-70"></section>
-
     <!----------- Footer ---------------->
     <footer class="padded bg-dark grid-spaceBetween">
         <div class="col-4-bottom">
@@ -125,8 +70,7 @@
             <p class="margin-0"> <strong>Store:</strong> <a href="#">Bali - Indonesia</a> </p>
             <p class="margin-0"> <strong>Instagram:</strong> <a href="https://instagram.com/@surfcoachingbali">@surfcoachingbali</a> </p>
         </div>
-    </footer>
-    
+    </footer>    
+        
 </body>
-
-</html>
+</html>  
