--- a/surf-adventures.html
+++ b/surf-adventures.html
@@ -57,6 +57,9 @@
         </div>
     </section>
 
+    <!--Image Banner 2 -->
+    <section class="padded bg-image tall-70"></section>
+
     <!----------- Footer ---------------->
     <footer class="padded bg-dark grid-spaceBetween">
         <div class="col-4-bottom">
